# prototypebench

./: .env.example  .gitignore  PLAN.md  README.ko.md  README.md  pyproject.toml
dataset/: README.md
docs/: harness-architecture.md  launch-strategy.md  seed-curation.md  task-schema.md
harness/: __init__.py  backend_runner.py  batch.py  extract.py  frontend_extract.py  frontend_runner.py  git_ops.py  junit.py  playwright_report.py  postgres.py  runner.py  score.py  test_patch_parser.py
harness/docker/: Dockerfile.backend  compose.no-host-ports.yml
harness/sources/: __init__.py  fastapi_full_stack_template.py  mcp_context_forge.py
raw/fastapi-template/: candidates.jsonl  extract_report.jsonl  prs.jsonl  rejected.jsonl
raw/mcp-context-forge/: candidates.jsonl  extract_report.jsonl  prs.jsonl  rejected.jsonl
schemas/: task_instance.schema.json
scripts/: __init__.py  build_from_extract.py  build_instance.py  cli.py  crawl_prs.py  filter_prs.py  gh.py  publish_hf.py  validate.py
tasks/: drafts.jsonl  instances.jsonl  instances.mcp-context-forge.jsonl
