[project]
name = "prototypebench"
version = "0.0.1"
description = "AI-native full-stack agent benchmark (React+Vite+Tailwind + FastAPI+SQLModel)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PrototypeBench" }]
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.9",
    "typer>=0.15",
    "rich>=13.9",
    "python-dotenv>=1.0",
    "jsonschema>=4.23",
    "huggingface-hub>=0.28",
]

[project.scripts]
pbench = "scripts.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "harness"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]
